# Door_SmartDoorbell

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mainlocal.cpp
daemon/: CButton.cpp  CButton.h  CCharDevDriver.cpp  CCharDevDriver.h  CMotion.cpp  CMotion.h  CdSensors.cpp  CdSensors.h  daemon.cpp  daemon.elf  interrupt.h
ddrivers/button/: .Module.symvers.cmd  .button.ko.cmd  .button.mod.cmd  .button.mod.o.cmd  .button.o.cmd  .button_driver.o.cmd  .modules.order.cmd  .utils.o.cmd  Makefile  button.mod.c  button_driver.c  modules.order
ddrivers/motion_sensor/: .Module.symvers.cmd  .modules.order.cmd  .motion.ko.cmd  .motion.mod.cmd  .motion.mod.o.cmd  .motion.o.cmd  .motion_driver.o.cmd  .utils.o.cmd  Makefile  modules.order  motion.ko  motion.mod.c  motion_driver.c  utils.c  utils.h
doorbell/: button.ko  database.py  mainlocal.elf
inc/: CCamera.h  CDatabase.h  CLivestream.h  CLocalS.h  database.py  debug.h  utils.h
src/: CCamera.cpp  CDatabase.cpp  CLivestream.cpp  CLocalS.cpp
